added auto prefixer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Hello</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<head>
+		<meta charset="UTF-8">
+		<title>Hello</title>
+		<link rel="stylesheet" href="styles/style.css">
 
-</head>
-<body>
-	<h1>Grunt Test</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error debitis maxime tempore accusamus hic. Praesentium laboriosam reiciendis doloribus quas officiis. Tenetur ratione nulla voluptas illum vel itaque quam excepturi optio.</p>
-	
-</body>
+	</head>
+	<body>
+		<div class="wrapper">
+			<h1>Grunt Test</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error debitis maxime tempore accusamus hic. Praesentium laboriosam reiciendis doloribus quas officiis. Tenetur ratione nulla voluptas illum vel itaque quam excepturi optio.</p>	
+		</div>
+	</body>
 </html>
