--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 			<h1>Grunt Test</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error debitis maxime tempore accusamus hic. Praesentium laboriosam reiciendis doloribus quas officiis. Tenetur ratione nulla voluptas illum vel itaque quam excepturi optio.</p>	
 		</div>
+	<script src="http://localhost:9090/livereload.js"></script>	
 	</body>
 </html>
